# Finanzas_Alicia

./: Dockerfile
finanzas-backend/: .env  Cargo.toml
finanzas-backend/.sqlx/: query-077b7a3c47e22d929fddb5fcc06406d5987dabfdae21d8ecafcc8329b504ff6c.json  query-093223326695e3746b36121736bdfb6cf24ce6ac33b5271bc3e8fb4949b87862.json  query-10135f2d1b8ea7f5c49e80e1d1690f8b34a25c268b67c2a5f435f8b0b5d00d17.json  query-136096a17507bba48f998ffd6494ef536d8e6a81862934ec04a121d7dcd5a224.json  query-1c18656b51c6af32c599cdd9574bedfce6415e6dcb434f19ac677ea0e73c8393.json  query-1cd78f35c4e8e70ce09c85ed32cf784a8162e1f3f1beb8da23d3c94931f0f98a.json  query-1d93ec2a2af6f470b9bd2ea1ca685d8f8f916337f2f5300313a4c6f59024ead6.json  query-22f6991a5d6892c918c45fbb371bb80761e9c79a14cc25b71c24206c32dd601b.json  query-247cdcfa14836c57661bda4822bfb4ac07fd164a60bfede4062023c16a6b63b8.json  query-26aef53409d4ceab0eaa0d2a13fb2ca905733ceba2529a5bcfa5eb7421ba4954.json  query-2de001b7a7f3da307d5d4a7a04b98285d9935ac5b0425ef50c8c4a7b9d75a576.json  query-2ebe91a419cb89fefe2cffb88e19910584314148fc2da6365cff0d1697244868.json  query-300e21fbc81619c3aabb5830b7eeef2266477b9ddf187e947c424858ccb60849.json  query-32b885f0017528cfd53bedab07cf2953b37f2953c9533d066ee0e530116605f7.json  query-3321c10c4fed61b51a9ccf9fb5e0c95e422155d4d108dd21b2e231e1b8ce8b39.json  query-3c9f64cde44f9e39f06b461f8cd0349a2ae0e8d2c6746f4b6d3247fc843e7c5a.json  query-40f4469cc4963d7a8b8dd9bb9d0339370fa7426bc5ff31b2a6df82b36bd81f0d.json  query-47974982e363217740ec3361cc26afab070c3dd1b8e8a7c7ee646eb363ebf19c.json  (+48 more)
finanzas-backend/src/: cron.rs  (+2 more)
(+93 files in other folders)
